fix dashboard overflow

--- a/src/components/DashboardLayout/styles.scss
+++ b/src/components/DashboardLayout/styles.scss
@@ -4,7 +4,8 @@
 
 .dashboardlayout {
   height: 100vh;
-  // overflow: scroll;
+  overflow: hidden;
+
 
   .dashboard-nav {
     background-color: $secondaryColor;
