--- a/src/pages/app/History/styles.scss
+++ b/src/pages/app/History/styles.scss
@@ -8,6 +8,8 @@
   .history-firstCol {
     border-right: 1px solid rgba($color: #000, $alpha: 0.05);
     padding: 20px;
+    height: 100%;
+    overflow-y: scroll;
   }
   .history-secondCol {
     border-right: 1px solid rgba($color: #000, $alpha: 0.05);
